--- a/index.html
+++ b/index.html
@@ -2,22 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/images/logo.png" />
+    <link rel="icon" type="image/png" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nithin</title>
+    <title>ReUse-Hub | Sell, Buy, Charity & Recycle - Hyderabad</title>
+    <meta name="description" content="ReUse-Hub is Hyderabad's premier doorstep pickup service for used furniture, electronics, and household items. Sell, buy, donate or recycle with us!" />
+    <meta name="keywords" content="scrap pickup, furniture buy sell, used furniture Hyderabad, recycle, donate furniture, ReUse-Hub" />
+    <meta name="author" content="ReUse-Hub" />
+    
+    <!-- Open Graph -->
+    <meta property="og:title" content="ReUse-Hub | Sell, Buy, Charity & Recycle" />
+    <meta property="og:description" content="Hyderabad's premier doorstep pickup service for used furniture, electronics, and household items." />
+    <meta property="og:image" content="/images/logo.png" />
+    <meta property="og:type" content="website" />
+    
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <div id="root">
-      <div style="text-align: center; padding: 2rem;">
-        <h1>Loading...</h1>
-      </div>
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-</html> 
+</html>
